# finance-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.relai/: learning-env-context.json  mock-manifest.json  optimizer-learning-envs.json  runtime-manifest.json  simulator.env.example
.relai/benchmark_csv/: 2067d3d3-8b66-4905-9fe1-d202daab7b88.csv
.relai/benchmarks/: finance-vs-offtopic.py
.relai/evaluators/: generated-evaluator.py
.relai/learning-envs/: no-off-topic-questions-allowed.py  redirect-when-off-topic-questions-are-asked.py
.relai/simulator/: .gitignore  SDK_REFERENCE.md  check.sh  install.sh  pyproject.toml  run.sh
.relai/simulator/frameworks/: openai-agents.md
.relai/simulator/src/relai_simulator/: adapter.py  adapter_contract.py  runner.py
logs/: conversation-001.json  conversation-002.json  conversation-003.json  traces-001.jsonl  traces-002.jsonl  traces-003.jsonl
src/demo_rag_agent/: __init__.py  agent.py  cli.py
src/finance_agent/: __init__.py  agent.py  cli.py  logging.py
tests/: test_agent.py  test_cli.py  test_logging.py
